tests/core/snapshots/graphql-conformance-009.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/graphql", httpCache: 42) {
  query: Query
}

interface Profile {
  handle: String!
  id: ID!
}

type Counter {
  count: Int!
}

type Page implements Profile {
  handle: String!
  id: ID!
  likers: Counter!
}

type Query {
  profiles(handles: [ID]!): [Profile!]! @graphQL(args: [{key: "handles", value: "{{.args.handles}}"}], name: "profiles")
}

type User implements Profile {
  friends: Counter!
  handle: String!
  id: ID!
}
