tests/core/snapshots/graphql-conformance-010.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(hostname: "0.0.0.0", port: 8001, queryValidation: false) @upstream(httpCache: 42) {
  query: Query
}

input LocationInput {
  lat: Int!
  lon: Int!
}

type Location {
  lat: Int!
  lon: Int!
}

type Point {
  id: ID!
  location: Location
  name: String!
}

type Query {
  nearby(location: LocationInput): Point
    @graphQL(args: [{key: "location", value: "{{.args.location}}"}], url: "http://upstream/graphql", name: "nearby")
}
