tests/core/snapshots/graphql-conformance-011.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/graphql", httpCache: 42) {
  query: Query
}

scalar DateISO

input LocationInput {
  lat: Int!
  lon: Int!
}

type Location {
  lat: Int!
  lon: Int!
}

type Point {
  createdAt: DateISO
  id: ID!
  location: Location
  name: String!
}

type Query {
  nearby(location: LocationInput): Point
    @graphQL(args: [{key: "location", value: "{{.args.location}}"}], name: "nearby")
}
