tests/core/snapshots/graphql-conformance-012.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "search": [
        {
          "name": "Person"
        },
        {
          "height": 100
        }
      ]
    }
  }
}
