tests/core/snapshots/graphql-conformance-012.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Person {
  age: Int
  name: String
}

scalar PhoneNumber

type Photo {
  height: Int
  width: Int
}

type Query {
  search: [SearchResult!]!
}

union SearchResult = Person | Photo

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
