tests/core/snapshots/graphql-conformance-012.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/graphql", httpCache: 42) {
  query: Query
}

union SearchResult = Person | Photo

type Person {
  age: Int
  name: String
}

type Photo {
  height: Int
  width: Int
}

type Query {
  search: [SearchResult!]! @graphQL(name: "search")
}
